Activity week 2 finished
